--- a/index.html
+++ b/index.html
@@ -5,11 +5,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Lets fetch</title>
-  <script src="js/fetch.js" defer></script>
+  <!-- <script src="js/fetch.js" defer></script> -->
+  <script src="js/render.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <h1>Fetch</h1>
+
+  <div id="cards" class="cards">
+    <article class="card">
+      <h3>Name: </h3>
+      <p>Email: </p>
+      <a href="#">Read more</a>
+    </article>
+  </div>
 
 </body>
 
